# clash-verge-rev

./: .gitignore  Cargo.toml  Changelog.md  README.md  biome.json  package.json
.github/: dependabot.yml
.github/workflows/: autobuild.yml  cargo-audit.yml  clean-old-assets.yml  cross_check.yaml  dev.yml  frontend-check.yml  lint-clippy.yml  push-build.yml  release.yml  rustfmt.yml  telegram-notify.yml  updater.yml
crates/clash-verge-cli/: Cargo.toml
crates/clash-verge-cli/src/: api.rs  config.rs  main.rs
crates/clash-verge-cli/src/commands/: list.rs  mod.rs  proxy.rs  rules.rs  update.rs
docs/: README_en.md  cli-tutorial.md
docs/superpowers/plans/: 2026-04-23-jms-subscription-implementation.md  2026-04-25-update-profile-in-proxies-page.md
docs/superpowers/specs/: 2026-04-23-jms-subscription-design.md  2026-04-25-update-profile-in-proxies-page-design.md
scripts/: prebuild.mjs  release-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/cmd/: save_profile.rs
src-tauri/src/config/: prfitem.rs  verge.rs
src-tauri/src/feat/: config.rs  profile.rs
src-tauri/src/module/: mod.rs  subscription_checker.rs
src-tauri/src/utils/: jms_converter.rs  mod.rs
src/components/home/: current-proxy-card.tsx
src/locales/ar/: proxies.json  settings.json  shared.json
src/locales/de/: proxies.json  settings.json  shared.json
src/locales/en/: proxies.json  settings.json  shared.json
src/locales/es/: proxies.json  settings.json  shared.json
src/locales/fa/: proxies.json  (+2 more)
src/pages/: proxies.tsx
src/services/: delay.ts
src/types/: global.d.ts
(+26 files in other folders)
