[package]
name = "clash-verge-cli"
version = "0.1.0"
description = "CLI tool for Clash Verge Rev"
edition = "2024"

[[bin]]
name = "cv-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
